--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
 
         function clear() {
             document.querySelector("section.clear").style.display = "flex";
-            document.querySelector("p.score").innerHTML = (type_count - (miss * 4) ** 1.24).toFixed(0)
-            document.querySelector("section.clear span.a").innerHTML = (type_count / 120).toFixed(2)
-            document.querySelector("section.clear span.b").innerHTML = ((type_count / miss) * 100).toFixed(2)
+            document.querySelector("p.score").innerHTML = type_count - (miss * 4)
+            document.querySelector("section.clear span.a").innerHTML = (type_count / 120)
+            document.querySelector("section.clear span.b").innerHTML = ((type_count / miss) * 100)
         }
 
         function startTimer() {
@@ -170,7 +170,7 @@
             display: "こんばんは",
             hiragana: "こんばんは"
         }, {
-            display: "競技プログラミïング",
+            display: "競技プログラミング",
             hiragana: "きょうぎぷろぐらみんぐ"
         }, { display: "プログラミングは楽しい", hiragana: "ぷろぐらみんぐはたのしい" },
         { display: "人工知能の未来", hiragana: "じんこうちのうのみらい" },
